<resources>
    <string name="app_name">GIPP App</string>

    <!-- Strings related to login -->
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">This user address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_app_nave"> Ola, Fulano </string>

    <string name="title_activity_main">Projetos PEG PESE</string>
    <string name="section_1">Em Progresso</string>
    <string name="section_6">Concluido</string>
    <string name="section_3">Pendente</string>
    <string name="section_4">Expirado</string>
    <string name="section_5">Cancelado</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="title_activity_formulario">Novo Projeto</string>
    <string name="title_activity_lista_tarefa">Lista de Tarefas</string>
    <string name="title_activity_lista_pojetos_status">ListaPojetosStatus</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
