<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    tools:context="com.example.admin.gipp_app.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/em_progresso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:padding="20dp"
            android:text="@string/section_1"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:background="@drawable/border"

            />
    <LinearLayout
        android:id="@+id/section1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >
        <ListView
            android:id="@+id/listaDeProjetos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>
    <TextView
        android:id="@+id/concluido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:padding="20dp"
        android:text="@string/section_6"
        android:textColor="@android:color/white"
        android:background="@drawable/border"
        android:textAlignment="center"
        />
    <LinearLayout
        android:id="@+id/section2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ListView
            android:id="@+id/listaDeProjetosCocluidos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />


    </LinearLayout>
        <TextView
            android:id="@+id/Pendente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:padding="20dp"
            android:text="@string/section_3"
            android:textColor="@android:color/white"
            android:background="@drawable/border"
            android:textAlignment="center"
            android:clickable="true"/>
        <LinearLayout
            android:id="@+id/section3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ListView
                android:id="@+id/listaDeProjetosPendentes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

        </LinearLayout>

    <TextView
        android:id="@+id/expirado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:padding="20dp"
        android:text="@string/section_4"
        android:textColor="@android:color/white"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:clickable="true"
        />
    <LinearLayout
        android:id="@+id/section4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <ListView
            android:id="@+id/listaDeProjetosExpirado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

     </LinearLayout>


    <TextView
        android:id="@+id/cancelado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:padding="20dp"
        android:text="@string/section_5"
        android:textColor="@android:color/white"
        android:background="@drawable/border"
        android:textAlignment="center"

        />
    <LinearLayout
        android:id="@+id/section5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <ListView
            android:id="@+id/listaDeProjetosCancelado"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

         </LinearLayout>

    </LinearLayout>


</RelativeLayout>
